@@ -1,5 +1,6 @@
 AUX xfig-3.2.5-darwin.patch 697 RMD160 0eab547f5e83a8b23f8064346ebfa519e75edb89 SHA1 2e03ab220e76293a47e2ddc73c4d8270371e0b79 SHA256 84fbe74064495d9e050e83df758e145888a0dc56ec503fd512a628d04f10dde9
 DIST xfig.3.2.5.full.tar.gz 5794801 RMD160 0d5ada9e4b7f1dbd8dab8a09fd5946ec0211904c SHA1 ce09d1a74dbddf0bc6b20fe9c558db584fbfed17 SHA256 62e43d5ef483acdb74d0b6dcdf5f8a12e545201048db33ffb5d573d74ae72c9a
 EBUILD xfig-3.2.5-r1.ebuild 2004 RMD160 4f4a7557de29a775114a3bcdddd1cbf932ad4ce8 SHA1 3a0e12e0396f815242aa667bc2287ae2a7a14e7e SHA256 5a256d42dd78ea807d45a7a1cb46ae1df296cec786bf620696ca8f2be0e8badb
-MISC ChangeLog 6694 RMD160 f197fb314553d7c572b728d8bff2436470b39111 SHA1 38ca203b3f583e8fd962d2d82e37880d6edebdfe SHA256 d6cf83cafe51830bd3398a3f027bed5723685d9f5bbe62c0cbe34ac3bff6dda9
+EBUILD xfig-3.2.5-r2.ebuild 2043 RMD160 d3858430f98b08c26fa2d811985e3e8261c7569d SHA1 1b5ee8da62d9b430889bbc9faae690a681de43d1 SHA256 b5c68e701729b825b67cc974520b5cc40bdb5fdbf330f982f9b5027c377ad569
+MISC ChangeLog 7052 RMD160 1aa14e064fab69be638fd39dae12240390bc110b SHA1 40be70eb6f1f3ad629cec2c61a9c5d96808ed143 SHA256 70512b87267374f5807a698a111764758e7a7cd1af04df5e0272019722419413
 MISC metadata.xml 250 RMD160 f27bc8272125f15d03c2bfc87e961842bdb303ae SHA1 c4991bbfca89085d81f56ed53f8b0c827a35a4f1 SHA256 68999dde540491efec63a8f47366dbc2d5f2c9f2c1211709d92366a56b6cd27d
